@@ -42,7 +42,10 @@ int main(int argc, char *argv[])
 				if (currentarg + 1 < argc) {
 					strncpy_nt(p.cfgfile, argv[currentarg + 1], 512);
 					if (debug)
-						printf("Used config file: %s\n", p.cfgfile);
+						printf("Loading config file: %s\n", p.cfgfile);
+					if (!loadcfg(p.cfgfile, CT_Image)) {
+						return 1;
+					}
 					currentarg++;
 				} else {
 					printf("Error: File for --config missing.\n");
@@ -52,9 +55,11 @@ int main(int argc, char *argv[])
 		}
 	}
 
-	/* load config if available */
-	if (!loadcfg(p.cfgfile, CT_Image)) {
-		return 1;
+	/* find configuration file if none was defined from command line */
+	if (p.cfgfile[0] == '\0') {
+		if (!loadcfg(p.cfgfile, CT_Image)) {
+			return 1;
+		}
 	}
 	cfg.qmode = 0;
 
@@ -102,6 +107,9 @@ void initiparams(IPARAMS *p)
 	p->cache = 0;
 	p->help = 0;
 	p->limit = -1;
+
+	/* load default config */
+	defaultcfg();
 }
 
 void showihelp(IPARAMS *p)
