@@ -14,6 +14,8 @@
  - New
    - Support input of more than 31 characters in interface name when using
      interface1+interface2 syntax data merge queries
+   - Support passing --config option multiple times, later files override
+     earlier files if settings overlap (vnstat and vnstati)
 
 
 2.9 / 23-Jan-2022
